/**
 * Copyright (C) 2019 Open Whisper Systems
 *
 * Licensed according to the LICENSE file in this repository.
 */
syntax = "proto2";

package signalservice;

option java_package         = "org.whispersystems.signalservice.internal.storage.protos";
option java_multiple_files  = true;


message StorageItem {
  optional bytes key   = 1;
  optional bytes value = 2;
}

message StorageItems {
  repeated StorageItem items = 1;
}

message StorageManifest {
  optional uint64 version = 1;
  optional bytes  value   = 2;
}

message ReadOperation {
  repeated bytes readKey = 1;
}

message WriteOperation {
  optional StorageManifest manifest   = 1;
  repeated StorageItem     insertItem = 2;
  repeated bytes           deleteKey  = 3;
  optional bool            clearAll   = 4;
}

message StorageRecord {
  enum Type {
    UNKNOWN = 0;
    CONTACT = 1;
    GROUPV1 = 2;
  }

  optional uint32        type    = 1;
  optional ContactRecord contact = 2;
  optional GroupV1Record groupV1 = 3;
}

message ContactRecord {
  message Identity {
    enum State {
      DEFAULT    = 0;
      VERIFIED   = 1;
      UNVERIFIED = 2;
    }

    optional bytes key   = 1;
    optional State state = 2;
  }

  message Profile {
    optional string givenName  = 1;
    optional string familyName = 4;
    optional bytes  key        = 2;
    optional string username   = 3;
  }

  optional string   serviceUuid  = 1;
  optional string   serviceE164  = 2;
  optional Profile  profile      = 3;
  optional Identity identity     = 4;
  optional bool     blocked      = 5;
  optional bool     whitelisted  = 6;
  optional string   nickname     = 7;
}

message GroupV1Record {
  optional bytes id          = 1;
  optional bool  blocked     = 2;
  optional bool  whitelisted = 3;
}

message ManifestRecord {
  optional uint64 version  = 1;
  repeated bytes  keys     = 2;
}
